# edge-deployment-manager

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: config.yaml
docs/: README.md
examples/: basic-deployment.py
src/: __init__.py  docker_handler.py  k8s_controller.py  manager.py  mqtt_handler.py
tests/: __init__.py  test_manager.py
